--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-lambda": "^3.92.0",
+    "@aws-sdk/client-sns": "^3.94.0",
     "@aws-sdk/credential-providers": "^3.92.0"
   }
 }
